# hypereth-api-sdk-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/v1/: api_key_delete.py  api_key_list.py  api_key_register.py  trade_intent_demo.py
examples/v1/asterdex/: market_demo.py
examples/v1/hyperliquid/: agent_wallet_demo.py  approve_builder_fee.py  exchange_api_rest_demo.py  exchange_api_ws_demo.py  info_api_demo.py
hypereth_sdk/: __init__.py  api.py  constants.py  crypto.py  exceptions.py  http_client.py  models.py  websocket_client.py
hypereth_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hypereth_sdk/asterdex/: __init__.py  client.py
hypereth_sdk/hyperliquid/: __init__.py  builder.py  client.py  utils.py
